<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculations</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_send">Calculate</string>
    <string name="TitleMessage">Quadratic Formula Calculator</string>
    <string name="Ahint">Enter Your A Value</string>
    <string name="Bhint">Enter Your B Value</string>
    <string name="Chint">Enter Your C Value</string>
    <string name="title_activity_display_roots">Your Roots</string>
    <string name="title_activity_quadratic_calc">QuadraticCalc</string>
    <string name="Engagement">Please select the calculator you would like to use.</string>
    <string name="button_QuadCalc">Quadratic Formula</string>
    <string name="button_Calculator">Basic Calculator</string>
    <string name="title_activity_calculator">Calculator</string>
    <string name="menu_settings">Settings</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonAdd">+</string>
    <string name="buttonSubtract">-</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonDivide">/</string>
    <string name="buttonToggleSign">+/-</string>
    <string name="buttonDecimalPoint">.</string>
    <string name="buttonEquals">=</string>
    <string name="buttonClear">C</string>
    <string name="buttonClearMemory">MC</string>
    <string name="buttonAddToMemory">M+</string>
    <string name="buttonSubtractFromMemory">M-</string>
    <string name="buttonRecallMemory">MR</string>
    <string name="buttonSquareRoot">√</string>
    <string name="buttonSquared">x²</string>
    <string name="buttonInvert">1/x</string>
    <string name="buttonSine">sin</string>
    <string name="buttonCosine">cos</string>
    <string name="buttonTangent">tan</string>

</resources>
